# WebScraper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: DeployUbuntuElf.yml  DeployWindows.yml  UnitTest.yml  UnitTestUbuntu.yml  UnitTestWindows.yml
src/: CsvGenerator.cpp  CsvGenerator.h  Data.h  HtmlParser.cpp  HtmlParser.h  WebRequest.cpp  WebRequest.h  main.cpp
test/: CsvGeneratorTest.h  HtmlParserTest.h  WebRequestTest.h  test.cpp
